force-app/main/default/objects/copado__Promotion__c/fields/Back_Promoted_Result__c.field-meta.xml
<CustomField>
    <fullName>Back_Promoted_Result__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Back Promoted Result</label>
    <referenceTo>Back_Promoted_Result__c</referenceTo>
    <relationshipLabel>Promotions</relationshipLabel>
    <relationshipName>Promotions</relationshipName>
    <type>Lookup</type>
</CustomField>