force-app/main/default/objects/copado__Promotion__c/fields/Main_Release__c.field-meta.xml
<CustomField>
    <fullName>Main_Release__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Main_Release</label>
    <referenceTo>Main_Release__c</referenceTo>
    <relationshipLabel>Promotions</relationshipLabel>
    <relationshipName>Promotions</relationshipName>
    <type>Lookup</type>
</CustomField>