force-app/main/default/objects/copado__Promotion__c/fields/Project_Sharing__c.field-meta.xml
<CustomField>
    <fullName>Project_Sharing__c</fullName>
    <description>This field is to share the promotion based on the projects</description>
    <label>Project Sharing</label>
    <length>255</length>
    <type>Text</type>
</CustomField>